fixed z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,10 +27,6 @@ body {
 
 /* Shared styles */
 
-#title, #search-input-container, #search-input, #clear, #search-results-container, #legend {
-	z-index: 1;
-}
-
 #title, #search-input, #search-results-container, #legend {
 	padding: 10px;
 	font: 12px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
@@ -66,6 +62,10 @@ body {
 }
 
 /* Primary interaction area */
+
+#top-left, #top-left * {
+	z-index: 2;
+}
 
 #top-left {
 	display: inline-block;
@@ -182,6 +182,7 @@ body {
 #legend {
 	right: 10px;
 	bottom: 80px;
+	z-index: 1;
 }
 
 #legend div span {
